--- a/index.html
+++ b/index.html
@@ -1363,7 +1363,7 @@
 	  // 並增加武器資源消耗：1級時每秒消耗0.5%，隨等級提升，消耗率按 effectMultiplier 增長
 	  zombieCommandCenter: {
 	    name: '僵尸指揮中心',
-	    baseCost: { materials: 150, weapons: 250, tech: 100 },
+	    baseCost: { materials: 250, weapons: 250, tech: 100 },
 	    costMultiplier: 1.5,
 	    baseEffect: { 
 	      zombieBoost: 0.05, 
@@ -1395,7 +1395,7 @@
 	  // 新增：珍稀庫，提高高稀有度物品獲得率
 	  rareVault: {
 		name: '珍稀庫',
-		baseCost: { tech: 500, materials: 150 },
+		baseCost: { tech: 500, materials: 150, weapons: 150 },
 		costMultiplier: 1.55,
 		baseEffect: { rareChanceBoost: 0.05 },  // 初始 +5%
 		effectMultiplier: 1.2,
@@ -1418,7 +1418,7 @@
 	  // 新增：武器影響中樞，給予強力生產加成，但持續消耗武器資源
 	  weaponConsumptionFacility: {
 		name: '武器影響中樞',
-		baseCost: { weapons: 350, materials: 150 },
+		baseCost: { weapons: 350, materials: 150, tech: 150 },
 		costMultiplier: 1.7,
 		baseEffect: { productionBonus: 0.1, weaponConsumptionRate: 0.02 },
 		effectMultiplier: 1.2,
