--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
 	.prod-zombie-plow {
 	  position: absolute;
 	  bottom: 10%;
-	  left: 10px;
+	  left: 50%;
 	  width: var(--zombie-size);
 	  height: var(--zombie-size);
 	  background-image: url('images/zombie_plow_sprite.png');
@@ -995,7 +995,7 @@
 	.prod-zombie-weld {
 	  position: absolute;
 	  bottom: 10%;
-	  left: 10px;
+	  left: 50%;
 	  width: var(--zombie-size);
 	  height: var(--zombie-size);
 	  background-image: url('images/zombie_weld_sprite.png');
@@ -1011,7 +1011,7 @@
 	.prod-zombie-lab {
 	  position: absolute;
 	  bottom: 10%;
-	  left: 10px;
+	  left: 50%;
 	  width: var(--zombie-size);
 	  height: var(--zombie-size);
 	  background-image: url('images/zombie_lab_sprite.png');
