--- a/index.html
+++ b/index.html
@@ -917,6 +917,7 @@
 	  width: 100%;
 	  height: 120px;             /* 整个生产区域高度 */
 	  position: relative;
+	  display: flex;
 	  /* 不再统一设置背景图片，因为此区域下各栏背景分开设置 */
 	  background: none;
 	}
@@ -924,7 +925,7 @@
 	/* 每一栏（prod-col）保持现有布局 */
 	#productionAnim .prod-col {
 	  float: left;
-	  width: 33.33%;
+	  flex: 1;
 	  height: 100%;
 	  position: relative;
 	  overflow: hidden;
@@ -980,6 +981,7 @@
 	  position: absolute;
 	  bottom: 10%;
 	  left: 50%;
+	  transform: translateX(-50%);
 	  width: var(--zombie-size);
 	  height: var(--zombie-size);
 	  background-image: url('images/zombie_plow_sprite.png');
@@ -996,6 +998,7 @@
 	  position: absolute;
 	  bottom: 10%;
 	  left: 50%;
+	  transform: translateX(-50%);
 	  width: var(--zombie-size);
 	  height: var(--zombie-size);
 	  background-image: url('images/zombie_weld_sprite.png');
@@ -1012,6 +1015,7 @@
 	  position: absolute;
 	  bottom: 10%;
 	  left: 50%;
+	  transform: translateX(-50%);
 	  width: var(--zombie-size);
 	  height: var(--zombie-size);
 	  background-image: url('images/zombie_lab_sprite.png');
